--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@
 
 
 <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
+<script src="scripts/index-fx.js"></script>
+<script src="scripts/scrollreveal.js"></script>
 
     </body>
 </html>
